# guap

./: README.md
learn/: README.md  generate_price.py
simulation/: .gitignore  build.sbt
simulation/src/main/scala/: Server.scala
simulator/: README.md  build.sbt
simulator/app/controllers/: Application.scala
simulator/conf/: routes
stalker/: README.md  get_price.js  index.js  initialize_table.js  log.js  monitor.js  package.json  price.json  setup_db.sh  stalker.go  write_to_bq.js
trader/: CMakeLists.txt  main.cpp
